--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,6 @@ add_subdirectory(Eigen)
 aux_source_directory(. SRC_LIST)
 add_executable(${PROJECT_NAME} ${SRC_LIST})
 include_directories(Eigen )
-add_definitions(-DEIGEN_USE_MKL_ALL)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 find_package(MKL)
@@ -12,18 +11,19 @@ if (MKL_FOUND)
 include_directories(${MKL_INCLUDE_DIRS})
 message("MKL link libraries are ${MKL_LIBRARIES}")
 target_link_libraries(${PROJECT_NAME} ${MKL_LIBRARIES})
+add_definitions(-DEIGEN_USE_MKL_ALL)
 else (MKL_FOUND)
 find_package(BLAS REQUIRED)
 if (BLAS_FOUND)
 include_directories(${BLAS_INCLUDE_DIRS})
-target_link_libraries(${PROJECT_NAME} ${BLAS_LIBRARY} -lmkl_intel_ilp64 -lmkl_core -lmkl_intel_thread -lpthread -lm -ldl)
+target_link_libraries(${PROJECT_NAME} ${BLAS_LIBRARY} -lm -ldl)
 message("Blas link library is ${BLAS_LIBRARIES}")
 else (BLAS_FOUND)
-target_link_libraries(${PROJECT_NAME} -llapack -lmkl_intel_ilp64 -lmkl_core -lmkl_intel_thread -lpthread -lm -ldl)
+target_link_libraries(${PROJECT_NAME} -lm -ldl)
 endif (BLAS_FOUND)
 endif (MKL_FOUND)
 
-include_directories(/opt/intel/mkl/include)
+#include_directories(/opt/intel/mkl/include)
 
 find_package(Doxygen)
 if(DOXYGEN_FOUND)
