--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,16 +11,16 @@ find_package(MKL)
 if (MKL_FOUND)
 include_directories(${MKL_INCLUDE_DIRS})
 message("MKL link libraries are ${MKL_LIBRARIES}")
-target_link_libraries(${PROJECT_NAME} ${MKL_LIBRARIES})
+target_link_libraries(${PROJECT_NAME}-test ${MKL_LIBRARIES})
 add_definitions(-DEIGEN_USE_MKL_ALL)
 else (MKL_FOUND)
 find_package(BLAS REQUIRED)
 if (BLAS_FOUND)
 include_directories(${BLAS_INCLUDE_DIRS})
-target_link_libraries(${PROJECT_NAME} ${BLAS_LIBRARY} -lm -ldl)
+target_link_libraries(${PROJECT_NAME}-test ${BLAS_LIBRARY} -lm -ldl)
 message("Blas link library is ${BLAS_LIBRARIES}")
 else (BLAS_FOUND)
-target_link_libraries(${PROJECT_NAME} -lm -ldl)
+target_link_libraries(${PROJECT_NAME}-test -lm -ldl)
 endif (BLAS_FOUND)
 endif (MKL_FOUND)
 
