--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,23 +6,23 @@ add_executable(${PROJECT_NAME}-test ${SRC_LIST})
 add_library (${PROJECT_NAME} ${SRC_LIST})
 include_directories(Eigen )
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
-find_package(MKL)
-if (MKL_FOUND)
-include_directories(${MKL_INCLUDE_DIRS})
-message("MKL link libraries are ${MKL_LIBRARIES}")
-target_link_libraries(${PROJECT_NAME}-test ${MKL_LIBRARIES})
-add_definitions(-DEIGEN_USE_MKL_ALL)
-else (MKL_FOUND)
-find_package(BLAS REQUIRED)
-if (BLAS_FOUND)
-include_directories(${BLAS_INCLUDE_DIRS})
-target_link_libraries(${PROJECT_NAME}-test ${BLAS_LIBRARY} -lm -ldl)
-message("Blas link library is ${BLAS_LIBRARIES}")
-else (BLAS_FOUND)
-target_link_libraries(${PROJECT_NAME}-test -lm -ldl)
-endif (BLAS_FOUND)
-endif (MKL_FOUND)
+# set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
+# find_package(MKL)
+# if (MKL_FOUND)
+# include_directories(${MKL_INCLUDE_DIRS})
+# message("MKL link libraries are ${MKL_LIBRARIES}")
+# target_link_libraries(${PROJECT_NAME}-test ${MKL_LIBRARIES})
+# add_definitions(-DEIGEN_USE_MKL_ALL)
+# else (MKL_FOUND)
+# find_package(BLAS REQUIRED)
+# if (BLAS_FOUND)
+# include_directories(${BLAS_INCLUDE_DIRS})
+# target_link_libraries(${PROJECT_NAME}-test ${BLAS_LIBRARY} -lm -ldl)
+# message("Blas link library is ${BLAS_LIBRARIES}")
+# else (BLAS_FOUND)
+# target_link_libraries(${PROJECT_NAME}-test -lm -ldl)
+# endif (BLAS_FOUND)
+# endif (MKL_FOUND)
 
 
 find_package(Doxygen)
