CMake and Doxygen tidy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,35 +1,23 @@
 project(IterativeSolver)
 cmake_minimum_required(VERSION 2.8)
-#add_subdirectory(Eigen)
+enable_language(Fortran)
+enable_language(CXX)
 aux_source_directory(. SRC_LIST)
+set(SRC_LIST IterativeSolver.cpp IterativeSolverF.F90 ParameterVector.cpp main.cpp Davidson.cpp Diis.cpp)
 add_executable(${PROJECT_NAME}-test ${SRC_LIST})
 #add_library (${PROJECT_NAME} ${SRC_LIST})
 include_directories(Eigen )
-
-#  set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
-# find_package(MKL)
-# if (MKL_FOUND)
-# include_directories(${MKL_INCLUDE_DIRS})
-# message("MKL link libraries are ${MKL_LIBRARIES}")
-# target_link_libraries(${PROJECT_NAME}-test ${MKL_LIBRARIES})
-# add_definitions(-DEIGEN_USE_MKL_ALL)
-# else (MKL_FOUND)
-# find_package(BLAS REQUIRED)
-# if (BLAS_FOUND)
-# include_directories(${BLAS_INCLUDE_DIRS})
-# target_link_libraries(${PROJECT_NAME}-test ${BLAS_LIBRARY} -lm -ldl)
-# message("Blas link library is ${BLAS_LIBRARIES}")
-# else (BLAS_FOUND)
-# target_link_libraries(${PROJECT_NAME}-test -lm -ldl)
-# endif (BLAS_FOUND)
-# endif (MKL_FOUND)
-
 
 find_package(Doxygen)
 if(DOXYGEN_FOUND)
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
 add_custom_target(${PROJECT_NAME}-doc ALL
-${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
+    DEPENDS  ${CMAKE_CURRENT_BINARY_DIR}/html/index.html
+    )
+file(GLOB headers *.h *.fh)
+add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/html/index.html
+COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
+DEPENDS ${SRC_LIST} ${headers} ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
 WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
 COMMENT "Generating API documentation with Doxygen" VERBATIM
 )
