Molpro output stream; deal with compiler warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,9 @@ project(IterativeSolver)
 cmake_minimum_required(VERSION 2.8)
 enable_language(Fortran)
 enable_language(CXX)
+if(CMAKE_COMPILER_IS_GNUCXX)
+    add_compile_options(-Wall)
+endif()
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "PGI")
     add_definitions(-DEIGEN_DONT_VECTORIZE)
 endif()
