--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "PGI")
     add_definitions(-DEIGEN_DONT_VECTORIZE)
 endif()
 aux_source_directory(. SRC_LIST)
-set(SRC_LIST IterativeSolver.cpp IterativeSolverF.F90 SimpleParameterVector.cpp ParameterVector.h main.cpp ISDavidson.cpp OldDiis.cpp ISDiis.cpp ISRSPT.cpp)
+set(SRC_LIST IterativeSolver.cpp IterativeSolverF.F90 SimpleParameterVector.cpp ParameterVector.h main.cpp ISDavidson.cpp ISDiis.cpp ISRSPT.cpp)
 add_executable(${PROJECT_NAME}-test ${SRC_LIST})
 #add_library (${PROJECT_NAME} ${SRC_LIST})
 include_directories(Eigen )
