--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,15 @@ add_library (${PROJECT_NAME} ${SRC_LIST})
 add_executable(${PROJECT_NAME}-test main.cpp)
 target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 
+add_executable(${PROJECT_NAME}-DIISexample examples/DIISexample.cpp)
+target_link_libraries(${PROJECT_NAME}-DIISexample ${PROJECT_NAME})
+
+add_executable(${PROJECT_NAME}-RSPTexample examples/RSPTexample.cpp)
+target_link_libraries(${PROJECT_NAME}-RSPTexample ${PROJECT_NAME})
+
+add_executable(${PROJECT_NAME}-DavidsonExample examples/DavidsonExample.cpp)
+target_link_libraries(${PROJECT_NAME}-DavidsonExample ${PROJECT_NAME})
+
 
 find_package(Doxygen)
 if(DOXYGEN_FOUND)
@@ -23,10 +32,10 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in ${CMAKE_CURRENT_BINARY_DI
 add_custom_target(${PROJECT_NAME}-doc ALL
     DEPENDS  ${CMAKE_CURRENT_BINARY_DIR}/html/index.html
     )
-file(GLOB headers *.h *.fh)
+file(GLOB doxysrc src/*.h src/*.fh examples/*)
 add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/html/index.html
 COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
-DEPENDS ${SRC_LIST} ${headers} ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
+DEPENDS ${SRC_LIST} ${doxysrc} ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
 WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
 COMMENT "Generating API documentation with Doxygen" VERBATIM
 )
