--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ if(CMAKE_COMPILER_IS_GNUCXX)
     add_compile_options(-Wall)
 endif()
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "PGI")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
     add_definitions(-DEIGEN_DONT_VECTORIZE)
 endif()
 aux_source_directory(src SRC_LIST)
