--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,15 @@ if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "PGI")
 else()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++98")
 endif()
+
+if("${MPI_CXX_COMPILER}" STREQUAL "")
+else()
+    find_package(MPI)
+    if(MPI_CXX_FOUND)
+    add_definitions(-DUSE_MPI)
+endif()
+endif()
+
 aux_source_directory(IterativeSolver SRC_LIST)
 set(SRC_LIST ${SRC_LIST} IterativeSolver/ParameterVector.h IterativeSolver/IterativeSolverF.F90)
 include_directories(Eigen .)
