--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,15 @@
 project(IterativeSolver)
 cmake_minimum_required(VERSION 2.8)
+
+if("${MPI_CXX_COMPILER}" STREQUAL "")
+else()
+    set(CMAKE_CXX_COMPILER ${MPI_CXX_COMPILER})
+    find_package(MPI)
+    if(MPI_CXX_FOUND)
+        add_definitions(-DUSE_MPI)
+    endif()
+endif()
+
 enable_language(Fortran)
 enable_language(CXX)
 if(CMAKE_COMPILER_IS_GNUCXX)
@@ -10,14 +20,6 @@ if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "PGI")
     add_definitions(-DEIGEN_DONT_VECTORIZE)
 else()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++98")
-endif()
-
-if("${MPI_CXX_COMPILER}" STREQUAL "")
-else()
-    find_package(MPI)
-    if(MPI_CXX_FOUND)
-    add_definitions(-DUSE_MPI)
-endif()
 endif()
 
 aux_source_directory(IterativeSolver SRC_LIST)
