--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,10 +17,7 @@ if(CMAKE_COMPILER_IS_GNUCXX)
     add_compile_options(-Wall)
 endif()
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "PGI")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
     add_definitions(-DEIGEN_DONT_VECTORIZE)
-else()
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++98")
 endif()
 
 aux_source_directory(IterativeSolver SRC_LIST)
@@ -32,7 +29,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${EIGEN3_INCLUDE_DIR})
 add_library (${PROJECT_NAME} ${SRC_LIST})
 
 enable_testing()
-add_executable(${PROJECT_NAME}-test main.cpp)
+add_executable(${PROJECT_NAME}-test ${PROJECT_NAME}-test.cpp)
 target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 add_test(${PROJECT_NAME}-test ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-test ${fil})
 
