--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,10 +37,10 @@ add_executable(PagedVector-test PagedVector-test.cpp)
 target_link_libraries(PagedVector-test ${PROJECT_NAME})
 add_test(PagedVector-test ${CMAKE_CURRENT_BINARY_DIR}/PagedVector-test)
 
-file (GLOB TESTS examples/*.cpp)
+file (GLOB TESTS examples/*.cpp examples/*.F90)
 foreach(fil ${TESTS})
   get_filename_component(nam ${fil} NAME_WE)
-  add_executable(${PROJECT_NAME}-${nam} examples/${nam}.cpp)
+  add_executable(${PROJECT_NAME}-${nam} ${fil})
   target_link_libraries(${PROJECT_NAME}-${nam} ${PROJECT_NAME})
   add_test(${nam} ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-${nam})
 endforeach()
