a bit more fortran

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ file (GLOB TESTS examples/*.cpp examples/*.F90)
 foreach(fil ${TESTS})
   get_filename_component(nam ${fil} NAME_WE)
   add_executable(${PROJECT_NAME}-${nam} ${fil})
+  set_target_properties(${PROJECT_NAME}-${nam} PROPERTIES COMPILE_FLAGS -UUSE_MPI)
   target_link_libraries(${PROJECT_NAME}-${nam} ${PROJECT_NAME})
   add_test(${nam} ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-${nam})
 endforeach()
