--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,11 +37,16 @@ add_executable(PagedVector-test PagedVector-test.cpp)
 target_link_libraries(PagedVector-test ${PROJECT_NAME})
 add_test(PagedVector-test ${CMAKE_CURRENT_BINARY_DIR}/PagedVector-test)
 
-file (GLOB TESTS examples/*.cpp examples/*.F90)
-foreach(fil ${TESTS})
-  get_filename_component(nam ${fil} NAME_WE)
-  add_executable(${PROJECT_NAME}-${nam} ${fil})
-  set_target_properties(${PROJECT_NAME}-${nam} PROPERTIES COMPILE_FLAGS -UUSE_MPI)
+file (GLOB EXAMPLES examples/*.cpp examples/*.F90)
+foreach (fil ${EXAMPLES})
+    get_filename_component(nam ${fil} NAME_WE)
+    get_filename_component(ext ${fil} EXT)
+    if (${ext} EQUAL ".F90")
+        add_executable(${PROJECT_NAME}-${nam} ${fil} IterativeSolverF.F90)
+    else ()
+        add_executable(${PROJECT_NAME}-${nam} ${fil})
+    endif ()
+    set_target_properties(${PROJECT_NAME}-${nam} PROPERTIES COMPILE_FLAGS -UUSE_MPI)
   target_link_libraries(${PROJECT_NAME}-${nam} ${PROJECT_NAME})
   add_test(${nam} ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-${nam})
 endforeach()
