--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,7 @@ foreach (fil ${EXAMPLES})
     get_filename_component(nam ${fil} NAME_WE)
     get_filename_component(ext ${fil} EXT)
     if (${ext} EQUAL ".F90")
-        add_executable(${PROJECT_NAME}-${nam} ${fil} IterativeSolverF.F90)
+        add_executable(${PROJECT_NAME}-${nam} IterativeSolverF.F90 ${fil})
     else ()
         add_executable(${PROJECT_NAME}-${nam} ${fil})
     endif ()
