--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,6 +14,7 @@ pipelines:
           - # zypper -n install eigen3-devel cmake gcc-fortran gcc-c++ openmpi-devel openmpi-libs blas-devel libblas3 git doxygen texlive-epstopdf ghostscript
           - ln -s /usr /usr/usr
           - git submodule update --init --recursive
+          - rm -rf build
           - mkdir -p build && cd build
           - cmake --version
           - cmake ..
