bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,11 +14,9 @@ pipelines:
           - # zypper -n install eigen3-devel cmake gcc-fortran gcc-c++ openmpi-devel openmpi-libs blas-devel libblas3 git doxygen texlive-epstopdf ghostscript
           - ln -s /usr /usr/usr
           - git submodule update --init --recursive
-          - rm -rf build
           - mkdir -p build && cd build
-          - cmake --version
           - cmake ..
-          - make -kj1
+          - make -kj
           - ctest -V
 definitions:
   caches:
