--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,4 +1,4 @@
-# This is a sample build configuration for C++ – Make.
+# This is a sample build configuration for C++ ï¿½ Make.
 # Check our guides at https://confluence.atlassian.com/x/5Q4SMw for more examples.
 # Only use spaces to indent your .yml configuration.
 # -----
@@ -15,6 +15,8 @@ pipelines:
           - ln -s /usr /usr/usr
           - git submodule update --init --recursive
           - mkdir -p build && cd build
+          - find . -name '*.o'
+          - find . -name '*.mod'
           - cmake ..
           - make -kj
           - ctest -V
