--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ else ()
     set(CMAKE_CXX_COMPILER ${MPI_CXX_COMPILER})
     find_package(MPI)
     if (MPI_CXX_FOUND)
-        add_definitions(-DUSE_MPI)
+        add_definitions(-DHAVE_MPI_H)
     endif ()
 endif ()
 
@@ -47,7 +47,7 @@ foreach (fil ${EXAMPLES})
     else ()
         add_executable(${PROJECT_NAME}-${nam} ${fil})
     endif ()
-    set_target_properties(${PROJECT_NAME}-${nam} PROPERTIES COMPILE_FLAGS -UUSE_MPI)
+    set_target_properties(${PROJECT_NAME}-${nam} PROPERTIES COMPILE_FLAGS -UHAVE_MPI_H)
     target_link_libraries(${PROJECT_NAME}-${nam} ${PROJECT_NAME})
     add_test(${nam} ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-${nam})
 endforeach ()
