--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,12 @@ else ()
     endif ()
 endif ()
 
+find_package(MPI )
+if(MPI_CXX_FOUND)
+include_directories(${MPI_CXX_INCLUDE_PATH})
+add_definitions(-DHAVE_MPI_H)
+endif(MPI_CXX_FOUND)
+
 enable_language(Fortran)
 enable_language(CXX)
 if (CMAKE_COMPILER_IS_GNUCXX)
@@ -30,11 +36,11 @@ add_library(${PROJECT_NAME} ${SRC_LIST})
 
 enable_testing()
 add_executable(${PROJECT_NAME}-test ${PROJECT_NAME}-test.cpp IterativeSolverF.F90)
-target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
+target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
 add_test(${PROJECT_NAME}-test ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-test ${fil})
 
 add_executable(PagedVector-test PagedVector-test.cpp)
-target_link_libraries(PagedVector-test ${PROJECT_NAME})
+target_link_libraries(PagedVector-test ${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
 add_test(PagedVector-test ${CMAKE_CURRENT_BINARY_DIR}/PagedVector-test)
 
 file(GLOB EXAMPLES examples/*.cpp examples/*.F90)
@@ -48,7 +54,7 @@ foreach (fil ${EXAMPLES})
         add_executable(${PROJECT_NAME}-${nam} ${fil})
     endif ()
     set_target_properties(${PROJECT_NAME}-${nam} PROPERTIES COMPILE_FLAGS -UHAVE_MPI_H)
-    target_link_libraries(${PROJECT_NAME}-${nam} ${PROJECT_NAME})
+    target_link_libraries(${PROJECT_NAME}-${nam} ${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
     add_test(${nam} ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-${nam})
 endforeach ()
 
