--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,11 @@ add_library(${PROJECT_NAME} ${SRC_LIST})
 enable_testing()
 add_executable(${PROJECT_NAME}-test ${PROJECT_NAME}-test.cpp IterativeSolverF.F90)
 target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
-add_test(${PROJECT_NAME}-test ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-test ${fil})
+if(MPIEXEC)
+    add_test(${PROJECT_NAME}-test ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${NPROC} --allow-run-as-root ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-test)
+else(MPIEXEC)
+    add_test(${PROJECT_NAME}-test ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-test ${fil})
+endif(MPIEXEC)
 
 add_executable(PagedVector-test PagedVector-test.cpp)
 target_link_libraries(PagedVector-test ${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
