--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,10 +16,9 @@ if(MPI_CXX_FOUND)
 include_directories(${MPI_CXX_INCLUDE_PATH})
 add_definitions(-DHAVE_MPI_H)
 # OpenMPI root guard: https://github.com/open-mpi/ompi/issues/4451
-if("$ENV{USER}" STREQUAL "root")
-    set(MPIEXEC "${MPIEXEC} --allow-run-as-root")
+if("$ENV{USER}" STREQUAL "root" OR "$ENV{HOME}" STREQUAL "/root")
+    set(MPIOPTIONS "--allow-run-as-root")
 endif()
-    message(MPI: MPIEXEC=${MPIEXEC})
 endif(MPI_CXX_FOUND)
 
 include(ProcessorCount)
@@ -55,7 +54,7 @@ enable_testing()
 add_executable(${PROJECT_NAME}-test ${PROJECT_NAME}-test.cpp IterativeSolverF.F90)
 target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
 if(MPIEXEC)
-    add_test(${PROJECT_NAME}-test ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${NPROC} ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-test)
+    add_test(${PROJECT_NAME}-test ${MPIEXEC} ${MPIOPTIONS} ${MPIEXEC_NUMPROC_FLAG} ${NPROC} ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-test)
 else(MPIEXEC)
     add_test(${PROJECT_NAME}-test ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-test ${fil})
 endif(MPIEXEC)
@@ -63,7 +62,7 @@ endif(MPIEXEC)
 add_executable(PagedVector-test PagedVector-test.cpp)
 target_link_libraries(PagedVector-test ${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
 if(MPIEXEC)
-    add_test(PagedVector-test ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${NPROC} ${CMAKE_CURRENT_BINARY_DIR}/PagedVector-test)
+    add_test(PagedVector-test ${MPIEXEC} ${MPIOPTIONS} ${MPIEXEC_NUMPROC_FLAG} ${NPROC} ${CMAKE_CURRENT_BINARY_DIR}/PagedVector-test)
 else(MPIEXEC)
     add_test(PagedVector-test ${CMAKE_CURRENT_BINARY_DIR}/PagedVector-test)
 endif(MPIEXEC)
