Removed the seperation into C++ and Fortran libraries

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,14 +1,12 @@
-########## C++ Library ##########
 add_library(${PROJECT_NAME} STATIC
         LinearAlgebra.h
         LAvector.h
         PagedVector.h
         IterativeSolver.cpp IterativeSolver.h
+        IterativeSolverF.F90
         )
 target_link_libraries(${PROJECT_NAME} PUBLIC Eigen3::Eigen)
+### For including C++ headers
 target_include_directories(${PROJECT_NAME} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
-
-########## Fortran Library ##########
-add_library(${PROJECT_NAME}F STATIC IterativeSolverF.F90)
-target_link_libraries(${PROJECT_NAME}F PUBLIC ${PROJECT_NAME})
+### For linking Fortran library
 target_include_directories(${PROJECT_NAME} INTERFACE ${CMAKE_CURRENT_BINARY_DIR})
