--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,7 +3,7 @@
 # Only use spaces to indent your .yml configuration.
 # -----
 # You can specify a custom docker image from Docker Hub as your build environment.
-image: pjknowles/opensuse:tumbleweed
+image: pjknowles/opensuse:2018-11-06
 
 pipelines:
   default:
@@ -11,7 +11,7 @@ pipelines:
         caches:
           - iterative-solver-cmake
         script: # Modify the commands below to build your repository.
-          - # zypper -n install eigen3-devel cmake gcc-fortran gcc-c++ openmpi-devel openmpi-libs blas-devel libblas3 git doxygen texlive-epstopdf ghostscript
+          - # zypper -n install eigen3-devel cmake gcc-fortran gcc-c++ openmpi-devel openmpi-libs blas-devel libblas3 git doxygen texlive-epstopdf ghostscript lapack
           - ln -s /usr /usr/usr
           - git submodule update --init --recursive
           - mkdir -p builddir && cd builddir
