--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -18,6 +18,7 @@ pipelines:
           - cmake ..
           - make -kj
   # OpenMPI root guard: https://github.com/open-mpi/ompi/issues/4451
+          - export MPIOPTIONS="--allow-run-as-root"
           - MPIOPTIONS="--allow-run-as-root" ctest -V
 definitions:
   caches:
