--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -17,9 +17,7 @@ pipelines:
           - mkdir -p builddir && cd builddir
           - cmake ..
           - make -kj
-  # OpenMPI root guard: https://github.com/open-mpi/ompi/issues/4451
-          - export MPIOPTIONS="--allow-run-as-root"
-          - MPIOPTIONS="--allow-run-as-root" ctest -V
+          - ctest -V
 definitions:
   caches:
     iterative-solver-cmake: builddir
