--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 # OpenMPI root guard: https://github.com/open-mpi/ompi/issues/4451
 if ("$ENV{USER}" STREQUAL "root" OR "$ENV{HOME}" STREQUAL "/root")
-    set(MPIOPTIONS "${MPIOPTIONS} --allow-run-as-root") # used in tests
+    set(MPIOPTIONS "--allow-run-as-root") # used in tests
 endif ()
 add_executable(IterativeSolver-test IterativeSolver-test.cpp)
 target_link_libraries(IterativeSolver-test ${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
