--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -19,3 +19,12 @@ if (MPIEXEC)
 else (MPIEXEC)
     add_test(PagedVector-test ${PROJECT_BINARY_DIR}/PagedVector-test)
 endif (MPIEXEC)
+
+add_executable(SimpleVector-test SimpleVector-test.cpp)
+target_link_libraries(SimpleVector-test ${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
+set_target_properties(SimpleVector-test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
+if (MPIEXEC)
+    add_test(SimpleVector-test ${MPIEXEC} ${MPIOPTIONS} ${MPIEXEC_NUMPROC_FLAG} ${NPROC} ${PROJECT_BINARY_DIR}/SimpleVector-test)
+else (MPIEXEC)
+    add_test(SimpleVector-test ${PROJECT_BINARY_DIR}/SimpleVector-test)
+endif (MPIEXEC)
