--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(${PROJECT_NAME} STATIC
         SimpleVector.h
         PagedVector.h
+        OpaqueVector.h
         IterativeSolver.cpp IterativeSolver.h
         IterativeSolverF.F90
         )
