--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,30 +1,10 @@
-# OpenMPI root guard: https://github.com/open-mpi/ompi/issues/4451
-if ("$ENV{USER}" STREQUAL "root" OR "$ENV{HOME}" STREQUAL "/root")
-    set(MPIOPTIONS "--allow-run-as-root") # used in tests
-endif ()
-add_executable(IterativeSolver-test IterativeSolver-test.cpp)
-target_link_libraries(IterativeSolver-test ${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
-set_target_properties(IterativeSolver-test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
-if (MPIEXEC)
-    add_test(IterativeSolver-test ${MPIEXEC} ${MPIOPTIONS} ${MPIEXEC_NUMPROC_FLAG} ${NPROC} ${PROJECT_BINARY_DIR}/IterativeSolver-test)
-else (MPIEXEC)
-    add_test(IterativeSolver-test ${PROJECT_BINARY_DIR}/IterativeSolver-test ${fil})
-endif (MPIEXEC)
-
-add_executable(PagedVector-test PagedVector-test.cpp)
-target_link_libraries(PagedVector-test ${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
-set_target_properties(PagedVector-test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
-if (MPIEXEC)
-    add_test(PagedVector-test ${MPIEXEC} ${MPIOPTIONS} ${MPIEXEC_NUMPROC_FLAG} ${NPROC} ${PROJECT_BINARY_DIR}/PagedVector-test)
-else (MPIEXEC)
-    add_test(PagedVector-test ${PROJECT_BINARY_DIR}/PagedVector-test)
-endif (MPIEXEC)
-
-add_executable(SimpleVector-test SimpleVector-test.cpp)
-target_link_libraries(SimpleVector-test ${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
-set_target_properties(SimpleVector-test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
-if (MPIEXEC)
-    add_test(SimpleVector-test ${MPIEXEC} ${MPIOPTIONS} ${MPIEXEC_NUMPROC_FLAG} ${NPROC} ${PROJECT_BINARY_DIR}/SimpleVector-test)
-else (MPIEXEC)
-    add_test(SimpleVector-test ${PROJECT_BINARY_DIR}/SimpleVector-test)
-endif (MPIEXEC)
+foreach (t IterativeSolver-test PagedVector-test SimpleVector-test)
+    add_executable(${t} ${t}.cpp)
+    target_link_libraries(${t} ${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
+    set_target_properties(${t} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
+    if (MPIEXEC)
+        add_test(${t} ${MPIEXEC} ${MPIOPTIONS} ${PROJECT_BINARY_DIR}/${t})
+    else (MPIEXEC)
+        add_test(${t} ${PROJECT_BINARY_DIR}/${t})
+    endif (MPIEXEC)
+endforeach ()
