parallel and serial testing

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -12,7 +12,10 @@ pipelines:
           - iterative-solver-cmake
         script: # Modify the commands below to build your repository.
           - # zypper -n install eigen3-devel cmake gcc-fortran gcc-c++ openmpi-devel openmpi-libs blas-devel libblas3 git doxygen texlive-epstopdf ghostscript lapack
-          - TOP=$PWD; BUILD=build/$(git rev-parse --abbrev-ref HEAD) ; mkdir -p $BUILD && cd $BUILD && pwd && cmake -DMPIOPTIONS="--allow-run-as-root" $TOP
+          - TOP=$PWD; BUILD=build/$(git rev-parse --abbrev-ref HEAD)/serial ; mkdir -p $BUILD && cd $BUILD && pwd && cmake $TOP
+          - cmake --build . -- -j 16
+          - ctest -V
+          - cd $TOP; BUILD=build/$(git rev-parse --abbrev-ref HEAD)/parallel ; mkdir -p $BUILD && cd $BUILD && pwd && CXX=mpicxx FC=mpif90 cmake -DMPIOPTIONS="--allow-run-as-root" $TOP
           - cmake --build . -- -j 16
           - ctest -V
 definitions:
