--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,9 +2,9 @@ foreach (t IterativeSolver-test PagedVector-test SimpleVector-test)
     add_executable(${t} ${t}.cpp)
     target_link_libraries(${t} ${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
     set_target_properties(${t} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
-    if (MPIEXEC)
+    if (MPI_FOUND)
         add_test(${t} ${MPIEXEC} ${MPIOPTIONS} ${PROJECT_BINARY_DIR}/${t})
-    else (MPIEXEC)
+    else (MPI_FOUND)
         add_test(${t} ${PROJECT_BINARY_DIR}/${t})
-    endif (MPIEXEC)
+    endif (MPI_FOUND)
 endforeach ()
