--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -15,6 +15,7 @@ pipelines:
           - TOP=$PWD; BUILD=build/$(git rev-parse --abbrev-ref HEAD)/serial ; mkdir -p $BUILD && cd $BUILD && pwd && cmake $TOP
           - cmake --build . -- -j 16
           - ctest -V
+          - mpicxx
           - cd $TOP; BUILD=build/$(git rev-parse --abbrev-ref HEAD)/parallel ; mkdir -p $BUILD && cd $BUILD && pwd && CXX=mpicxx FC=mpif90 cmake -DMPIOPTIONS="--allow-run-as-root" $TOP
           - cmake --build . -- -j 16
           - ctest -V
