--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,13 +17,15 @@ endif (NOT MPI_FOUND)
 if (MPI_CXX_FOUND)
     include_directories(${MPI_CXX_INCLUDE_PATH})
     add_definitions(-DHAVE_MPI_H)
-    message("MPI build of ${PROJECT_NAME}")
+    message("MPI build of ${CMAKE_CURRENT_SOURCE_DIR} for ${CMAKE_PROJECT_NAME} with CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}")
 else ()
-    message("Serial build of ${PROJECT_NAME}")
+    message("Serial build of ${CMAKE_CURRENT_SOURCE_DIR} for ${CMAKE_PROJECT_NAME} with CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}")
 endif (MPI_CXX_FOUND)
 
-if (CMAKE_COMPILER_IS_GNUCXX)
-    add_compile_options(-Wall)
+include(CheckCXXCompilerFlag)
+CHECK_CXX_COMPILER_FLAG("-Wall" _Wall)
+if (_Wall)
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall")
 endif ()
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "PGI")
     add_definitions(-DEIGEN_DONT_VECTORIZE)
